--- a/user1/src/styles.css
+++ b/user1/src/styles.css
@@ -47,3 +47,41 @@ background-color: rgb(0, 0, 0);
     
  }
  
+ 
+.button {
+  padding: 12px 24px;
+  background-color: #af4c4c; 
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s, transform 0.2s; 
+}
+
+
+.button:hover {
+  background-color: #45a049; 
+  transform: scale(1.05); 
+}
+
+
+.button:focus {
+  outline: none;
+  box-shadow: 0 0 8px rgba(72, 133, 237, 0.6); 
+}
+
+
+.button:active {
+  background-color: #3e8e41; 
+  transform: scale(1); 
+}
+.da
+{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    margin:10px
+}
