--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,10 @@ body
 margin:0px;
 
 }
+.App{
+  height: 100vh;
+  width: 100vw;
+}
 .Nav    
 {
     background:rebeccapurple;
@@ -84,4 +88,50 @@ background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     margin:10px
+}
+.Login
+{
+  height: 100vh;
+  width: 100vw;
+  background: #000000;
+align-items: center;
+justify-content: center;
+display: flex;
+margin: 0px;
+
+
+}
+.Login button
+{
+    margin:10px
+}
+.Login_box{
+  background: #f0e3e3;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 350px;
+  padding: 50px;
+  margin: 10px;
+  text-align: center;
+}
+
+
+.Login_box label {
+  display: block;
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 5px;
+}
+
+.Login_box input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.input-container {
+  margin-bottom: 15px;
+  text-align: left;
 }
