--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ margin:0px;
 }
 .Nav ul{
     padding:0px;
-    margin:0px;
+    margin:1%;
     list-style: none;
     display: flex;
     align-items: center;
@@ -138,6 +138,19 @@ margin: 0px;
 .DriversList
 
 {
-  height: 100vh;
-  width: 100vw;
+  height: 100vh; /* Full height of the viewport */
+  width: 100vw; /* Full width of the viewport */
+ 
+  justify-content: center;
+  
 }
+
+.List button
+{
+  display: flex; /* Enable flexbox */
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center items horizontally */
+  justify-content: center;
+  margin:1%;
+}
+
