--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,6 @@ margin:0px;
     list-style: none;
     display: flex;
     align-items: center;
-   
     gap: 1rem;
 }
 .Nav a{
@@ -153,4 +152,19 @@ margin: 0px;
   justify-content: center;
   margin:1%;
 }
+.alink{
 
+  color: inherit;
+  text-decoration: none;
+  margin: 0px;
+  height:20%;
+  display:flex;
+  align-items: center;
+  padding: 0px;
+}
+.alink:hover{
+  
+    background-color: #45a049; 
+    transform: scale(1.05); 
+  
+}
