--- a/src/styles.css
+++ b/src/styles.css
@@ -168,3 +168,96 @@ margin: 0px;
     transform: scale(1.05); 
   
 }
+
+
+.Addtrip
+{
+  height: 100vh;
+  width: 100vw;
+  background: #000000;
+align-items: center;
+
+margin: 0px;
+
+}
+
+.Addtrip_box{
+  background: #07dbbf;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  padding: 100px;
+  margin-left: 50px;
+  margin-top: 0;
+  text-align: center;
+  display:block;
+}
+
+
+.Addtrip_box label {
+  display:block;
+  font-size: 14px;
+  color: #666;
+  margin: 5px;
+}
+
+.Addtrip_box input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 14px;
+  margin: 5px;
+}
+.site_Title{
+  color:white;
+  font-size:25px;
+  background-color: #000000;
+  margin:0;
+  padding: 2%;
+}
+.buttonlink{
+  color: inherit;
+  text-decoration: none;
+  
+  height:100%;
+  display:flex;
+  align-items: center;
+  padding: 0px;
+}
+.NavA   
+{
+    background:rgb(51, 78, 153);
+    color:white;
+    display :flex;
+    justify-content:space-between;
+    align-items: stretch;
+    gap:5 px;
+    padding: 3 px; 
+}
+.NavA ul{
+    padding:0px;
+    margin:1%;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.NavA a{
+    color: inherit;
+    text-decoration: none;
+    margin: 5px;
+    height:100%;
+    display:flex;
+    align-items: center;
+    padding: 4px;
+}
+
+.NavA li.active{
+background-color: rgb(0, 0, 0);
+
+}
+.NavA li:hover{
+    background-color: rgb(110, 197, 10);
+    
+ }
