--- a/src/styles.css
+++ b/src/styles.css
@@ -1,59 +1,66 @@
+* {
+  box-sizing: border-box;
 
-*{
-    box-sizing:border-box;
+}
+
+body {
+  margin: 0px;
 
 }
 
-body
-{
-margin:0px;
-
-}
-.App{
+.App {
   height: 100vh;
   width: 100vw;
 }
-.Nav    
-{
-    background:rebeccapurple;
-    color:white;
-    display :flex;
-    justify-content:space-between;
-    align-items: stretch;
-    gap:5 px;
-    padding: 3 px; 
-}
-.Nav ul{
-    padding:0px;
-    margin:1%;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-.Nav a{
-    color: inherit;
-    text-decoration: none;
-    margin: 5px;
-    height:100%;
-    display:flex;
-    align-items: center;
-    padding: 4px;
+
+.Nav {
+  background: rebeccapurple;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 5 px;
+  padding: 3 px;
 }
 
-.Nav li.active{
-background-color: rgb(0, 0, 0);
+.Nav ul {
+  padding: 0px;
+  margin: 1%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.Nav a {
+  color: inherit;
+  text-decoration: none;
+  margin: 5px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 4px;
+}
+
+.Nav li.active {
+  background-color: rgb(0, 0, 0);
 
 }
-.Nav li:hover{
-    background-color: rgb(110, 197, 10);
-    
- }
- 
- 
+
+.Nav li:hover {
+  background-color: rgb(110, 197, 10);
+
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .button {
   padding: 12px 24px;
-  background-color: #af4c4c; 
+  background-color: #af4c4c;
   color: white;
   font-size: 16px;
   font-weight: bold;
@@ -61,55 +68,68 @@ background-color: rgb(0, 0, 0);
   border-radius: 8px;
   cursor: pointer;
   text-align: center;
-  transition: background-color 0.3s, transform 0.2s; 
+  transition: background-color 0.3s, transform 0.2s;
 }
 
 
 .button:hover {
-  background-color: #45a049; 
-  transform: scale(1.05); 
+  background-color: #45a049;
+  transform: scale(1.05);
 }
 
 
 .button:focus {
   outline: none;
-  box-shadow: 0 0 8px rgba(72, 133, 237, 0.6); 
+  box-shadow: 0 0 8px rgba(72, 133, 237, 0.6);
 }
 
 
 .button:active {
-  background-color: #3e8e41; 
-  transform: scale(1); 
+  background-color: #3e8e41;
+  transform: scale(1);
 }
-.da
-{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin:10px
+
+.signup {
+  background-color: #2196f3;
 }
-.Login
-{
+
+.signup:hover {
+  background-color: #0b7dda;
+}
+
+.signup:active {
+  background-color: #0b7dda;
+}
+
+.da {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: 10px
+}
+
+.Login {
   height: 100vh;
   width: 100vw;
   background: #000000;
-align-items: center;
-justify-content: center;
-display: flex;
-margin: 0px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin: 0px;
 
 
 }
-.Login button
-{
-    margin:10px
+
+.Login button {
+  margin: 10px
 }
-.Login_box{
+
+.Login_box {
   background: #f0e3e3;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 350px;
-  padding: 50px;
+  padding: 30px;
   margin: 10px;
   text-align: center;
 }
@@ -134,54 +154,58 @@ margin: 0px;
   margin-bottom: 15px;
   text-align: left;
 }
-.DriversList
 
-{
-  height: 100vh; /* Full height of the viewport */
-  width: 100vw; /* Full width of the viewport */
- 
+.DriversList {
+  height: 100vh;
+  /* Full height of the viewport */
+  width: 100vw;
+  /* Full width of the viewport */
+
   justify-content: center;
-  
+
 }
 
-.List button
-{
-  display: flex; /* Enable flexbox */
-  flex-direction: column; /* Stack items vertically */
-  align-items: center; /* Center items horizontally */
+.List button {
+  display: flex;
+  /* Enable flexbox */
+  flex-direction: column;
+  /* Stack items vertically */
+  align-items: center;
+  /* Center items horizontally */
   justify-content: center;
-  margin:1%;
+  margin: 1%;
 }
-.alink{
+
+.alink {
 
   color: inherit;
   text-decoration: none;
   margin: 0px;
-  height:20%;
-  display:flex;
+  height: 20%;
+  display: flex;
   align-items: center;
   padding: 0px;
 }
-.alink:hover{
-  
-    background-color: #45a049; 
-    transform: scale(1.05); 
-  
+
+.alink:hover {
+
+  background-color: #45a049;
+  transform: scale(1.05);
+
 }
 
 
-.Addtrip
-{
+.Addtrip {
   height: 100vh;
   width: 100vw;
   background: #000000;
-align-items: center;
+  align-items: center;
 
-margin: 0px;
+  margin: 0px;
 
 }
 
-.Addtrip_box{
+.Addtrip_box {
   background: #07dbbf;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -190,12 +214,12 @@ margin: 0px;
   margin-left: 50px;
   margin-top: 0;
   text-align: center;
-  display:block;
+  display: block;
 }
 
 
 .Addtrip_box label {
-  display:block;
+  display: block;
   font-size: 14px;
   color: #666;
   margin: 5px;
@@ -209,55 +233,60 @@ margin: 0px;
   font-size: 14px;
   margin: 5px;
 }
-.site_Title{
-  color:white;
-  font-size:25px;
+
+.site_Title {
+  color: white;
+  font-size: 25px;
   background-color: #000000;
-  margin:0;
+  margin: 0;
   padding: 2%;
 }
-.buttonlink{
+
+.buttonlink {
   color: inherit;
   text-decoration: none;
-  
-  height:100%;
-  display:flex;
+
+  height: 100%;
+  display: flex;
   align-items: center;
   padding: 0px;
 }
-.NavA   
-{
-    background:rgb(51, 78, 153);
-    color:white;
-    display :flex;
-    justify-content:space-between;
-    align-items: stretch;
-    gap:5 px;
-    padding: 3 px; 
-}
-.NavA ul{
-    padding:0px;
-    margin:1%;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-.NavA a{
-    color: inherit;
-    text-decoration: none;
-    margin: 5px;
-    height:100%;
-    display:flex;
-    align-items: center;
-    padding: 4px;
+
+.NavA {
+  background: rgb(51, 78, 153);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 5 px;
+  padding: 3 px;
 }
 
-.NavA li.active{
-background-color: rgb(0, 0, 0);
+.NavA ul {
+  padding: 0px;
+  margin: 1%;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.NavA a {
+  color: inherit;
+  text-decoration: none;
+  margin: 5px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 4px;
+}
+
+.NavA li.active {
+  background-color: rgb(0, 0, 0);
 
 }
-.NavA li:hover{
-    background-color: rgb(110, 197, 10);
-    
- }
+
+.NavA li:hover {
+  background-color: rgb(110, 197, 10);
+
+}
