--- a/src/Pages/Admin/styles.css
+++ b/src/Pages/Admin/styles.css
@@ -146,7 +146,7 @@ header {
         font-size: 14px;
     }
 }
-#manager-greeting {
+#admin-greeting {
     font-size: 24px;
     color: #333;
     text-align: center;
