--- a/src/Pages/Admin/Components/styles.css
+++ b/src/Pages/Admin/Components/styles.css
@@ -110,6 +110,7 @@ body {
     color: white;
     transition: background-color 0.3s ease, transform 0.2s ease;
     margin: 0 10px;
+    text-decoration: none;
 }
 
 .button:hover,
