--- a/src/Pages/Driver/Attend.css
+++ b/src/Pages/Driver/Attend.css
@@ -88,9 +88,24 @@
 
 .failurepopUp {
   background-color: rgb(22, 148, 159);
-  z-index: 6;
+  z-index: 992;
   width: 40vh;
   height: 10vh;
 
   top: 23.5%;
+}
+
+.formmsuccAttend {
+  display: flex; /* starts out with a display of none so it can be changed to block on click */
+  background-color: rgba(143, 22, 143, 0.5);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 991; /* will be displayed in front of background */
+  /* top: 5vh; */
+  top:0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
 }
