--- a/src/Pages/Driver/Button.css
+++ b/src/Pages/Driver/Button.css
@@ -1,4 +1,4 @@
-.button {
+.button10 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +11,7 @@
   width: 150px;
   height: 30px;
 }
-.button:hover {
+.button10:hover {
   transform: translateY(3px);
   cursor: pointer;
   box-shadow: 0px 5px 4px 0px cornflowerblue;
