--- a/src/Pages/Driver/Trips.css
+++ b/src/Pages/Driver/Trips.css
@@ -39,8 +39,7 @@
   border-bottom: 2 px solid black;
   box-shadow: 0px 5px 7px;
   /* height: 300px; */
-  height: 200px;
-  width: 200px;
+
   /* position: relative;
   top: 34%; */
 }
@@ -55,6 +54,8 @@
   outline-width: 0px;
   color: #f7fafc;
   text-decoration: none;
+  height: 100px;
+  width: 100%;
 }
 .item2 {
   margin-bottom: 0px;
