--- a/src/Pages/Driver/Components/Profile.css
+++ b/src/Pages/Driver/Components/Profile.css
@@ -1,7 +1,26 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: content-box;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
+#main-profile {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #f4f4f9;
+  font-family: 'Arial', sans-serif;
+  padding-top: 20px;
+}
+
+#welcome-message {
+  font-size: 2.5rem;
+  color: #333;
+  text-align: center;
+  margin: 0;
+  padding-top: 0;
+}
+
+#loading-message {
+  font-size: 2rem;
+  color: #777;
+  font-weight: normal;
+}
+
+#welcome-message, #loading-message {
+  transition: all 0.3s ease-in-out;
+}
