--- a/src/Pages/Driver/Components/ProfileSettings.css
+++ b/src/Pages/Driver/Components/ProfileSettings.css
@@ -90,6 +90,13 @@ input.set {
 
 .profile-button-set:hover {
   background-color: #0056b3;
+  cursor: pointer;
+}
+.profile-button-set:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
+  color: #7a7a7a; 
+  border: 1px solid #d3d3d3; 
 }
 
 .profile-experience-set {
@@ -122,3 +129,15 @@ input.set {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
   width: 100%;
 }
+.success-message {
+  text-align: center;
+  color: green;
+  font-weight: bold;
+}
+
+.error-message {
+  text-align: center;
+  color: red;
+  font-weight: bold;
+}
+
