--- a/src/Pages/Driver/Components/Profile.css
+++ b/src/Pages/Driver/Components/Profile.css
@@ -8,10 +8,11 @@
 .main-profile {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh; /* Full viewport height */
   justify-content: center;
-  margin-top: 50px;
+  align-items: center; /* Center content vertically */
   flex-direction: column;
+  margin: auto;
 }
 .myprofile-sidebar-set {
   padding: 20px;
@@ -21,4 +22,10 @@
   align-items: center;
   justify-content: center;
 
+}
+#rate-star{
+  margin-top: 20px;
+  padding: 0px;
+  display: flex;
+  margin-left: 10px;
 }
