--- a/src/Pages/Driver/NavBar.css
+++ b/src/Pages/Driver/NavBar.css
@@ -12,7 +12,7 @@
   position: sticky;
   top: 0;
   /* overflow-y: visible; */
-  max-height: 83px;
+  height: 83px;
   z-index: 900;
 }
 .nav_Driver .mainPage {
