--- a/src/Pages/Passenger/PrivateTrips.css
+++ b/src/Pages/Passenger/PrivateTrips.css
@@ -277,3 +277,20 @@ input::-webkit-inner-spin-button {
   color: #555;
   cursor: pointer;
 }
+
+
+.formmsucc{
+
+  display: flex;   /* starts out with a display of none so it can be changed to block on click */
+  background-color: rgba(255, 255, 255, 0.54);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 990; /* will be displayed in front of background */
+  /* top: 5vh; */
+  top:0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+}
