--- a/src/Pages/Passenger/AllTrips.css
+++ b/src/Pages/Passenger/AllTrips.css
@@ -401,7 +401,7 @@
 .fakepop,
 .fakepop2 {
   display: flex;
-  background-color: rgba(143, 22, 143, 0.5);
+  background-color: rgba(193, 192, 193, 0.9);
   height: 100vh;
   width: 100vw;
   position: fixed;
@@ -849,4 +849,90 @@
   justify-content: space-evenly;
   margin: 30px;
   position: relative;
+}
+/* From Uiverse.io by akshat-patel28 */ 
+.card-error {
+  /* width: 330px;
+  height: 80px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  background-color: #ffffff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 15px; */
+
+  width: 330px;
+  height: 80px;
+  border-radius: 8px;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  background-color: #ffffff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  z-index: 991;
+  width: 40vh;
+  height: 10vh;
+  position: fixed;
+  right: 50%;
+  transform: translate(165px, -40px);
+  top: 15.5%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 15px;
+}
+.wave-error {
+  position: absolute;
+  transform: rotate(90deg);
+  left: -31px;
+  top: 32px;
+  width: 80px;
+  fill: #fc0c0c3a;
+}
+.icon-container-error {
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fc0c0c48;
+  border-radius: 50%;
+  margin-left: 8px;
+}
+.icon-error {
+  width: 17px;
+  height: 17px;
+  color: #d10d0d;
+}
+.message-text-container-error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex-grow: 1;
+}
+.message-text-error,
+.sub-text-error {
+  margin: 0;
+  cursor: default;
+}
+.message-text-error {
+  color: #d10d0d;
+  font-size: 17px;
+  font-weight: 700;
+}
+.sub-text-error {
+  font-size: 14px;
+  color: #555;
+}
+.cross-icon-error {
+  width: 18px;
+  height: 18px;
+  color: #555;
+  cursor: pointer;
 }
